# Ebook

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
assets/fat_userdata/: README.txt
docs/: Ft6336GU_Firmware 外部寄存器_20151112.xlsm
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cc
main/app/ebook/: README.md  ebook_app.cc  ebook_app.hpp
main/app/ebook/apps/: app.cc  app.hpp  app_id.hpp  app_registry.cc  app_registry.hpp  stub_app.cc  stub_app.hpp
main/app/ebook/apps/calendar/: calendar_app.cc  calendar_app.hpp
main/app/ebook/apps/clock/: clock_app.cc  clock_app.hpp  clock_store.cc  clock_store.hpp
main/app/ebook/apps/drawing/: drawing_app.cc  drawing_app.hpp
main/app/ebook/apps/files/: files_app.cc  files_app.hpp  vfs_browser.cc  vfs_browser.hpp
main/app/ebook/apps/gallery/: gallery_app.cc  gallery_app.hpp
main/app/ebook/apps/music/: music_app.cc  music_app.hpp  music_library.cc  music_library.hpp  music_store.cc  music_store.hpp
main/app/ebook/apps/notepad/: notepad_app.cc  notepad_app.hpp
main/app/ebook/apps/reader/: book_shelf.cc  book_shelf.hpp  reader_app.cc  reader_app.hpp  reader_layout.hpp  reader_menu.cc  reader_menu.hpp  reading_store.cc  reading_store.hpp  txt_book.cc  txt_book.hpp  txt_index_cache.cc  txt_index_cache.hpp
main/app/ebook/apps/settings/: auto_lock.cc  auto_lock.hpp  lock_password.cc  lock_password.hpp  power_save.cc  power_save.hpp  settings_about.cc  settings_app.cc  settings_app.hpp  settings_bluetooth.cc  settings_common.cc  settings_display.cc  settings_hotspot.cc  settings_internal.hpp  settings_key_bindings.cc  settings_security.cc  settings_sound.cc  settings_storage.cc  settings_time.cc  settings_wifi.cc
main/app/ebook/apps/weather/: weather_app.cc  weather_app.hpp  weather_cities.cc  weather_cities.hpp
main/app/ebook/apps/wooden_fish/: wooden_fish_app.cc  wooden_fish_app.hpp
main/app/ebook/composer/: composer.cc  composer.hpp
main/app/ebook/core/: geometry.hpp  log.hpp  result.hpp
main/app/ebook/data/: clock_provider.cc  clock_provider.hpp  persist.cc  persist.hpp  system_state.cc  system_state.hpp
main/app/ebook/display/: display_port.cc  display_port.hpp
main/app/ebook/gfx/: bitmap_font.cc  bitmap_font.hpp  canvas.cc  canvas.hpp  font.cc  font.hpp  icon.hpp  text_layout.cc  text_layout.hpp  utf8.hpp
main/app/ebook/input/: gesture_tuner.cc  gesture_tuner.hpp  input_bindings.cc  input_bindings.hpp  input_dispatch.cc  input_dispatch.hpp  input_event.hpp  input_router.cc  input_router.hpp  key_bindings.cc  key_bindings.hpp  physical_input.cc  physical_input.hpp  physical_types.cc  physical_types.hpp
main/app/ebook/overlays/: confirm_prompt.cc  confirm_prompt.hpp  control_center.cc  control_center.hpp  keyboard.cc  keyboard.hpp  status_bar.cc  status_bar.hpp  toast.cc  toast.hpp
main/app/ebook/platform/: audio_codec.cc  audio_codec.hpp  battery_sampler.cc  battery_sampler.hpp  boot.cc  boot.hpp  housekeeper.cc  housekeeper.hpp  music_player.cc  music_player.hpp  wooden_fish_sound.cc  wooden_fish_sound.hpp
main/app/ebook/presenter/: frame_request.hpp  present_plan.cc  present_plan.hpp  presenter.cc  presenter.hpp
main/app/ebook/router/: page_id.hpp  page_registry.cc  refresh_edges.cc  refresh_edges.hpp  refresh_intent.cc  refresh_intent.hpp  route_stack.cc  route_stack.hpp  router.cc  router.hpp  transition.cc  transition.hpp
main/app/ebook/shell/: app_grid_page.cc  app_grid_page.hpp  app_host_page.cc  app_host_page.hpp  home_page.cc  home_page.hpp  lock_page.cc  lock_page.hpp  page.hpp
main/app/ebook/text/: gbk_table.inc  path_encoding.cc  path_encoding.hpp
main/app/ebook/ui/: layer.hpp  list_view.cc  list_view.hpp  strings.hpp  theme.hpp  ui_bus.cc  ui_bus.hpp  ui_event.hpp  ui_loop.cc  ui_loop.hpp  widgets.cc  widgets.hpp
main/app/network/bluetooth/: bluetooth.cc  bluetooth.hpp
main/app/network/bluetooth/gatt/: gatt.cc  gatt.hpp
main/app/network/wifi/: wifi.cc  wifi.hpp
main/app/protocol/file_server/: file_server.cc  file_server.hpp
main/app/protocol/http/: http.cc  http.hpp
main/app/protocol/ntp/: ntp.cc  ntp.hpp
main/app/protocol/websocket/: websocket.cc  websocket.hpp
main/app/system/event/: event.cc  event.hpp
main/app/system/info/: info.cc  info.hpp
main/app/system/power/: power.cc  power.hpp
main/app/system/task/: task.cc  task.hpp
main/bsp/battery/: battery.cc  battery.hpp
main/bsp/config/: config.hpp
main/bsp/driver/audio/es8311/: es8311_codec.cc  es8311_codec.hpp
main/bsp/driver/button/: button.cc  button.hpp
main/bsp/driver/ft6336u/: ft6336u.cc  ft6336u.hpp  touch_gesture.cc  touch_gesture.hpp
main/bsp/driver/gdey027t91/: backlight.cc  backlight.hpp  framebuffer.hpp  gdey027t91.cc  gdey027t91.hpp  panel.hpp  ssd1680.hpp
main/bsp/driver/qmi8658a/: qmi8658a.cc  qmi8658a.hpp
main/bsp/i2c/: i2c.cc  i2c.hpp
main/common/memory/: memory.cc  memory.hpp
main/common/memory/double_buffer/: double_buffer.hpp  double_buffer_impl.hpp
main/common/memory/ring_buffer/: ring_buffer.hpp  ring_buffer_impl.hpp
main/common/ota/: ota.cc  ota.hpp
main/common/storage/: storage.cc  storage.hpp  storage_usb_msc.cc  storage_usb_msc.hpp
main/common/time/: time.cc  time.hpp
main/common/uuid/: uuid.cc  uuid.hpp
main/test/audio/: test_audio.cc  test_audio.hpp
main/test/battery/: test_battery.cc  test_battery.hpp
main/test/bluetooth/: test_bluetooth.cc  test_bluetooth.hpp
main/test/button/: test_button.cc  test_button.hpp
main/test/common/: test_log.hpp
main/test/gdey027t91/: test_gdey027t91.hpp  test_gdey027t91_gesture.cc  test_gdey027t91_screen.cc  test_gdey027t91_touch.cc
main/test/qmi8658a/: test_qmi8658a.cc  test_qmi8658a.hpp
main/test/storage/: test_storage.cc  test_storage.hpp
main/test/wifi/: test_wifi.cc  test_wifi.hpp
partitions/: partition_16mb.csv  partition_8mb.csv
patches/: esphome__micro-mp3-new_slen-init.patch
scripts/: check_code.py  format_code.py  package_firmware.py
tools/: gen_bitmap_font.py  gen_gbk_table.py  gen_icon_font.py
(+2 files in other folders)
